# vortex-datafusion-cli

./: .gitignore  Cargo.toml  NOTICE  README.md  REUSE.toml  renovate.json
.github/workflows/: ci-and-release-tag.yml
LICENSES/: Apache-2.0.txt
scripts/: test_version_pair.py  version_pair.py
src/: main.rs
tests/: vortex_sql.rs
