# SPDX-License-Identifier: Apache-2.0
# SPDX-FileCopyrightText: Copyright the Vortex contributors

[package]
name = "vortex-datafusion-cli"
version = "0.1.0"
edition = "2024"
authors = ["Vortex Authors <hello@vortex.dev>"]
license = "Apache-2.0"

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
datafusion = "53.1.0"
datafusion-cli = "53.1.0"
dirs = "6.0.0"
env_logger = "0.11.10"
mimalloc = "0.1.50"
regex = "1.12.3"
tokio = { version = "1.52.1", features = ["full"] }
vortex-datafusion = "0.70.0"

[dev-dependencies]
insta = "1.47.2"
